Bump Mockito from 3.2.4 to 3.3.0 (#345)